--- a/public/index.html
+++ b/public/index.html
@@ -35,4 +35,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script async defer src="https://connect.facebook.net/en_US/sdk.js"></script>
 </html>
